# Tiba-POS-System

./: .env.example  .gitignore  DEPLOY.md  README.md  build-client.ps1  docker-compose.yml  docs.md  init.sql  schema.sql  setup-firewall.ps1  setup-pos.ps1  setup-pos_WINDOWS.ps1  setup-startup.ps1  setup-wsl.ps1  setup-wsl_WINDOWS.ps1  sql_doc.md  start-server.ps1  steps.md  tech-stack.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  env.d.ts  i18n.ts  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/components/: LanguageSwitcher.tsx  Layout.tsx
client/src/lib/: api.ts  appInit.ts  formatters.ts  preferencesService.ts  tauriService.ts
client/src/locales/: ar.json  en.json  es.json
client/src/pages/: ActivityLog.tsx  Admin.tsx  Login.tsx  POS.tsx  Products.tsx  Settings.tsx  Storage.tsx  Transactions.tsx  Users.tsx  Welcome.css  Welcome.tsx
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: index.ts
server/src/db/: index.ts
server/src/middleware/: auth.ts
server/src/routes/: activity.ts  auth.ts  payments.ts  products.ts  storage.ts  transactions.ts  users.ts
server/src/types/: index.ts
server/src/utils/: activityLogger.ts
