[package]
name = "tiba-pos"
version = "1.0.0"
description = "Tiba POS - Point of Sale System"
authors = ["Tiba"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-store = { version = "2" }
